2779. Hotel sold-out messaging Let's say that the "room" is sold out instead of hotel.

--- a/project/res/values/strings.xml
+++ b/project/res/values/strings.xml
@@ -3079,7 +3079,7 @@
 
     <!-- Tablet Sold Out Screen -->
     <!-- Header text to indicating hotel sold out -->
-    <string name="tablet_sold_out_summary_text_hotel">This hotel is now sold out. Sorry!</string>
+    <string name="tablet_sold_out_summary_text_hotel">This room is now sold out. Sorry!</string>
     <!-- Button text to remove sold hotel -->
     <string name="tablet_sold_out_remove_hotel">Remove hotel</string>
     <!-- Button text to select another hotel -->
