--- a/project/res/values/strings.xml
+++ b/project/res/values/strings.xml
@@ -352,6 +352,8 @@
     <string name="error_launch_connection">Unfortunately, we can\'t connect.</string>
     <!-- Menu option for going to see your trips/itineraries -->
     <string name="trips">Trips</string>
+    <!-- Actionbar Title when an exotic destination is being displayed -->
+    <string name="Destination">Destination</string>
     <!-- Google play services unrecoverable error dialog message -->
     <string name="google_play_services_unrecoverable_error">This app requires Google Play Services. Please install the latest version of Google Play Services.</string>
 
