--- a/project/res/values/strings.xml
+++ b/project/res/values/strings.xml
@@ -1010,7 +1010,7 @@
     <!-- Title for screen when in an invalid POS we can't search for yet -->
     <string name="taking_off_soon">Taking Off Soon…</string>
     <!-- Text for screen when in an invalid POS we can't search for yet -->
-    <string name="invalid_flights_pos">Sorry, but mobile flight booking is &lt;b&gt;not yet available&lt;/b&gt; in your location.</string>
+    <string name="invalid_flights_pos">Sorry, but mobile flight booking is not yet available in your location.</string>
     <!-- Error message when we the user picks the same airport for both the departure and arrival airports -->
     <string name="error_same_flight_departure_arrival">Departure and arrival airports must be different.</string>
 
