--- a/project/res/values/strings.xml
+++ b/project/res/values/strings.xml
@@ -3,7 +3,7 @@
 
     <!-- Tablet search strings -->
     <!-- Hint asking users to search for anything -->
-    <string name="search_all_hint">Search destinations, landmarks and addresses</string>
+    <string name="search_all_hint">Search destinations and landmarks</string>
     <!-- Hint in edit text that the user should type in a destination (location) -->
     <string name="destinations_hint">Search destinations&#8230;</string>
     <!-- Hint in edit text that the user should type in an origin (location) -->
