--- a/project/res/values/strings.xml
+++ b/project/res/values/strings.xml
@@ -352,6 +352,8 @@
     <string name="error_launch_connection">Unfortunately, we can\'t connect.</string>
     <!-- Menu option for going to see your trips/itineraries -->
     <string name="trips">Trips</string>
+    <!-- Menu option for going to see your trips/itineraries -->
+    <string name="Your_Trips">Your Trips</string>
     <!-- Actionbar Title on main launch screen -->
     <string name="Explore">Explore</string>
     <!-- Actionbar Title when an exotic destination is being displayed -->
