--- a/project/res/values/strings.xml
+++ b/project/res/values/strings.xml
@@ -176,23 +176,25 @@
     <!-- Denoting the lowest hotel/flight rate, e.g. "From $200" -->
     <string name="From_x_TEMPLATE">From %s</string>
     <!-- Drop down item for denoting that infant travellers are in laps -->
-    <string name="infants_in_laps">Infants under 2 (at time of travel) in laps</string>
+    <string name="infants_in_laps">Laps</string>
     <!-- Drop down item for denoting that infant travellers are in seats -->
-    <string name="infants_in_seats">Infants under 2 (at time of travel) in seats</string>
+    <string name="infants_in_seats">Seats</string>
     <!-- Label for infants under 2 seating preference -->
     <string name="infants_under_two">Infants Under 2</string>
     <!-- Label stating that there must be as many adults as infants if the seating preference is "in lap" -->
-    <string name="max_one_infant_per_lap">Maximum of one infant per adult (>13) lap</string>
+    <string name="max_one_infant_per_lap">There aren\'t enough adults (age 12+) to have infants sit in laps. They need their own seats.</string>
     <!-- Description for infant travelers sitting in laps -->
     <string name="in_laps">In Laps</string>
     <!-- Description for infant travelers sitting in seats -->
     <string name="in_seats">In Seats</string>
     <!-- Title for infant seating preference -->
     <string name="infant_seating_preference">Seating Preference for Infants Under 2</string>
+    <!-- Description for infant seating preference message -->
+    <string name="infants_seating_preference_description">Will infants under age 2 (at time of flight) sit in laps or have their own seats?</string>
     <!-- A message telling the user that the app needs to do a new search because infant seating preference has changed to in seat-->
-    <string name="infants_in_seats_prompt">All infants under 2 (at time of travel) will have their own seats. We will now search again for the correct number of tickets.</string>
+    <string name="infants_in_seats_prompt">Infants in seats need their own tickets. Let\'s search again for the infants\' tickets.</string>
     <!-- A message telling the user that the app needs to do a new search because infant seating preference has changed to in lap-->
-    <string name="infants_in_laps_prompt">All infants under 2 (at time of travel) must be in the lap of someone who is at least 12 years old. We will now search again for the correct number of tickets.</string>
+    <string name="infants_in_laps_prompt">Infants in lap don\'t need their own tickets. We\'ll start a new search with fewer tickets.</string>
 
     <!-- Tablet flight sort/filter controls -->
     <!-- Header for a flight filter based upon number of stops -->
